--- a/index.css
+++ b/index.css
@@ -82,3 +82,56 @@ header{
   flex-direction: column;
   align-items: center;
 }
+.banner_container{
+  margin: 40px 0 ;
+}
+.banner_img{
+  width: 100%;
+}
+.category_heading{
+  text-transform: uppercase;
+  color: #3e4152;
+  letter-spacing: .15em;
+  font-size: 1.8em;
+  margin: 50px 0 10px 30px;
+  max-height: 5em;
+  font-weight: 700;
+}
+
+.category_items{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.sale_item{
+  width: 250px;
+}
+.footer_container{
+  background: #FAFBFC;
+  padding: 30px 0 40px 0;
+  display: flex;
+  justify-content: space-evenly;
+}
+.footer_col{
+  display: flex;
+  flex-direction: column;
+}
+.footer_col a{
+  font-size: 15px;
+  color: #696b79;
+  text-decoration: none;
+  padding-bottom: 5px;
+}
+.footer_col h3{
+  color: #282c3f;
+  background-color: transparent;
+  font-weight: 700;
+  font-size: 13px;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+}
+.copyright{
+  color: #94969f;
+  text-align: end;
+  padding: 15px;
+}
