--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@ header{
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #dfd8d8;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
 .nav_bar{
   display: flex;
@@ -134,4 +138,32 @@ header{
   color: #94969f;
   text-align: end;
   padding: 15px;
+}
+.sidebar{
+
+  /* TO MAKE SIDEBAR */
+  right: 0;
+  position: fixed;
+  bottom: 130px;
+  width: 44px;
+  height: 288px;
+  background-color: #535766;
+  z-index: 6;
+  color: #fff;
+  letter-spacing: 1px;
+  cursor: pointer;
+  font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+
+
+  /* TO DISPLAY ITS TEXT */
+  writing-mode: vertical-lr; /* Vertical text from bottom to top */
+  text-orientation: sideways-right; /* Keeps each letter upright */
+  /* background-color: #333; */
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  padding: 5px;
+
 }
